prevent content from shifting horizontally when scrollbar appears

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,5 +1,9 @@
 $background: rgb(17, 23, 37);
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   background-color: $background;
 }
